# gradeloop-core-v2

./: .dockerignore  .env.example  .gitignore  .sonarqube-ignore  CONTRIBUTING.md  GITHUB_INTEGRATION_IMPLEMENTATION.md  GITHUB_INTEGRATION_README.md  GRADLOOP-11-IMPLEMENTATION.md  IDE_IMPLEMENTATION.md  IDE_QUICK_REFERENCE.md  IDE_TESTING_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  LLMs.txt  Makefile  README.md  VAULT_IMPLEMENTATION_SUMMARY.md  clone_detection_summary.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.dokploy.yml  docker-compose.local.yml  docker-compose.prod.yaml  docker-compose.train.yaml  docker-compose.yaml  go.mod  go.work.sum  kong.yml  package-lock.json  package.json  prompt.md  sonar-project.properties  turbo.json
.github/: CODEOWNERS  (+1 more)
apps/services/cipas-service/: CLONE_DETECTION_README.md  Dockerfile  EVALUATION_RESULTS.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
apps/services/cipas-service/clone_detection/features/: semantic_features.py  syntactic_features.py
apps/services/cipas-service/clone_detection/utils/: common_setup.py
apps/services/cipas-service/scripts/: README.md  download_aicdbench_dataset.py  download_aigcodeset_dataset.py  download_all_datasets.sh  download_dataset.sh  download_humanvsai_dataset.py  evaluate_bcb.py  explore_aicdbench_dataset.py  explore_aigcodeset_dataset.py  explore_humanvsai_dataset.py
apps/services/cipas-service/src/cipas/: main.py
apps/services/cipas-service/tests/benchmarks/: test_normalization_perf.py
apps/services/cipas-service/tests/integration/: test_determinism.py  test_normalization_api.py
apps/services/cipas-services/cipas-ai/: .env.example  .gitignore  3STAGE_IMPLEMENTATION.md  Dockerfile  Dockerfile.train  README.md  TRAINING.md  config.py  config.yaml  demo_3stage_pipeline.py  evaluate.py  evaluate_aicd_bench.py  evaluate_droid_collection.py  feature_extractor.py  main.py  main_unixcoder.py  missing_methods.py  model_engine.py  model_loader.py  pyproject.toml  requirements.txt  schemas.py  start.py  stylometry_extractor.py  stylometry_model.py  test_3stage_pipeline.py  train.py  train_droid_collection.py  train_modernbert.py  train_unixcoder.py
apps/services/cipas-services/cipas-ai/cipas_ai/: __init__.py  main.py
apps/services/cipas-services/cipas-ai/dataset_loaders/: __init__.py  aicd_bench_loader.py  unified_loader.py
apps/services/cipas-services/cipas-ai/losses/: __init__.py  multitask_loss.py
apps/services/cipas-services/cipas-ai/model/: metrics.json  tokenizer.json
apps/services/cipas-services/cipas-ai/models/: __init__.py  unixcoder_detector.py
apps/services/cipas-services/cipas-ai/preprocessing/: __init__.py  ast_multimodal.py  uncertainty_filter.py
apps/services/cipas-services/cipas-ai/scripts/: build_parsers.py  prepare_droid_dataset.py  train.sh
apps/services/cipas-services/cipas-ai/src/: main.py
apps/services/cipas-services/cipas-service-syntax/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start_server.sh
apps/services/cipas-services/cipas-service-syntax/config/: languages.yaml
apps/services/cipas-services/cipas-service-syntax/docs/: API.md  FASTAPI_CONVERSION.md  PIPELINE_GUIDE.md
apps/services/cipas-services/cipas-service-syntax/scripts/: README.md  compare_samples.py  demo_clone_detection.py  evaluate_bcb.py  evaluate_bcb_jsonl.py  evaluate_toma.py  export_results.py  quick_evaluate.py  setup_grammars.sh  setup_pipeline.sh  train_model.py
apps/services/cipas-services/cipas-service-syntax/src/: __init__.py
apps/services/cipas-services/cipas-service-syntax/tests/: __init__.py  conftest.py
apps/services/cipas-syntactics/: Dockerfile  README.md  VISUALIZATION_TEST_RESULTS.md  cipas-syntactics.md  database.py  evaluate.py  evaluate_clustering.py  evaluate_core.py  evaluate_parallel.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py  train.py  train_core.py
apps/services/cipas-syntactics/clone_detection/: cascade_worker.py  collusion_graph.py  lsh_index.py  preprocessor.py
apps/services/cipas-syntactics/clone_detection/features/: syntactic_features.py
apps/services/cipas-syntactics/clone_detection/models/: bigclonebench_xgb.pkl  classifiers.py  scaler.pkl
apps/services/cipas-syntactics/clone_detection/normalizers/: structural_normalizer.py  universal_mapper.py
apps/services/cipas-syntactics/clone_detection/pipelines/: __init__.py
apps/services/cipas-syntactics/clone_detection/tokenizers/: tree_sitter_tokenizer.py
apps/services/cipas-syntactics/clone_detection/utils/: common_setup.py
apps/services/cipas-syntactics/repositories/: __init__.py  annotations.py  similarity_reports.py
apps/services/ivas-service/: Dockerfile  README.md  pyproject.toml
apps/services/ivas-service/app/: config.py  dependencies.py  main.py
apps/services/ivas-service/app/routes/: assignments.py  chat_ui.py  competencies.py  sessions.py  viva_ws.py  voice.py
apps/services/ivas-service/app/schemas/: __init__.py  competency.py  session.py
apps/services/ivas-service/tests/: test_grader.py  test_question_selector.py  test_viva_session.py  test_voice_enrollment.py
apps/services/keystroke/: .env.example  COMPLETE_IMPLEMENTATION_DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_COMPLETION_GUIDE.md  behavioral_analysis.py  db.py  enrollment_tasks.json  feature_extraction.py  lint-issues.txt  main.py  pyproject.toml  redis_client.py  requirements.txt  typenet_inference.py
apps/services/keystroke/docs/: BEHAVIORAL_ANALYSIS_DEPLOYMENT_CHECKLIST.md  BEHAVIORAL_ANALYSIS_GUIDE.md  BEHAVIORAL_ANALYSIS_QUICKSTART.md  BEHAVIORAL_ANALYSIS_README.md  BEHAVIORAL_ANLYSIS_IMPLEMENTATION_SUMMARY.md  KEYSTROKE_INTEGRATION_SUMMARY.md
apps/services/keystroke/models/: preprocess_full_dataset.py  typenet_colab_training.ipynb
shared/libs/py/: pyproject.toml
shared/libs/py/gradeloop/: logger.py  secrets.py
shared/libs/py/secrets/: .bandit  .coverage  README.md  __init__.py  client.py  coverage.xml  dev-requirements.txt  requirements.txt  setup-dev.sh  setup.py  test_client.py
(+1674 files in other folders)
