[tool.poetry]
name = "ivas-service"
version = "0.1.0"
description = "Intelligent Viva Assessment System — AI-powered voice-based oral examination service for GradeLoop"
authors = ["GradeLoop Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^14.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
redis = {extras = ["hiredis"], version = "^5.0.0"}
numpy = "^1.26.0"
resemblyzer = "^0.1.3"
soundfile = "^0.12.0"
librosa = "^0.10.0"
google-genai = "^1.0.0"
python-multipart = "^0.0.20"
minio = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.13.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
