[tool.poetry]
name = "keystroke-service"
version = "0.1.0"
description = "Keystroke Dynamics Authentication Service - ML-based biometric authentication"
authors = ["GradeLoop Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
websockets = "^14.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
numpy = "^1.26.0"
scikit-learn = "^1.6.0"
h5py = "^0.10.0"
tqdm = "^4.67.0"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
pika = "^1.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.20"
requests = "^2.32.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
google-generativeai = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]