[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradeloop-shared"
version = "0.1.0"
description = "Shared libraries for GradeLoop services"
requires-python = ">=3.9"
dependencies = [
    "hvac>=1.1.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gradeloop*"]
