[tool.poetry]
name = "cipas-ai"
version = "0.1.0"
description = "AI-generated code detection microservice using DroidDetect-Large model"
authors = ["Gradeloop Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
# CPU-only PyTorch (no CUDA dependencies)
torch = { version = "^2.4.0", source = "torch-cpu" }
# Install transformers from source for custom model support (ModernBERT)
transformers = { git = "https://github.com/huggingface/transformers.git" }
accelerate = "^0.34.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
