[tool.poetry]
name = "cipas-ai"
version = "2.0.0"
description = "Code Intelligence and Plagiarism Assessment System - AI Detection API"
authors = ["SLIIT Team <team@sliit.lk>"]
readme = "README.md"
packages = [{include = "cipas_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"

# ML Dependencies with CUDA 11.8 support
torch = {version = "2.1.2+cu118", source = "pytorch-cu118"}
torchvision = {version = "0.16.2+cu118", source = "pytorch-cu118"}
torchaudio = {version = "2.1.2+cu118", source = "pytorch-cu118"}
transformers = "^4.36.0"
accelerate = "^0.25.0"
datasets = "^2.14.0"
huggingface-hub = "^0.19.0"

# CatBoost with GPU support  
catboost = "^1.2.0"

# Scientific computing
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
pandas = "^2.1.0"

# Tree-sitter for code parsing
tree-sitter = "^0.20.0"
tree-sitter-python = "^0.20.0"
tree-sitter-java = "^0.20.0"
tree-sitter-c = "^0.20.0"

# Model optimization and quantization (CUDA-enabled)
bitsandbytes = "^0.41.0"

# Visualization
matplotlib = "^3.8.0"
seaborn = "^0.13.0" 
plotly = "^5.17.0"

# Utilities
tqdm = "^4.66.0"
click = "^8.1.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"
httpx = "^0.25.0"
types-pyyaml = "^6.0.0"
types-redis = "^4.6.0"

# PyTorch CUDA 11.8 source
[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.scripts]
cipas-ai = "cipas_ai.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
async = ["celery", "redis"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "catboost.*",
    "bitsandbytes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=cipas_ai --cov-report=term-missing"
