[tool.poetry]
name = "cipas-ai"
version = "0.3.0"
description = "UniXcoder-based AI Code Detection Service with Multi-Dataset Training"
authors = ["Gradeloop Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

# Validation & Settings
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"

# PyTorch & Transformers
# For GPU: pip install torch --index-url https://download.pytorch.org/whl/cu121
# For CPU: pip install torch --index-url https://download.pytorch.org/whl/cpu
torch = "^2.4.0"

# Transformers for UniXcoder support
transformers = ">=4.36.0"
accelerate = "^0.34.0"

# Quantization support (4-bit/8-bit for limited VRAM)
bitsandbytes = "^0.44.0"

# Tree-sitter for AST parsing (multi-language support)
tree-sitter = ">=0.21.0,<0.24.0"
tree-sitter-languages = "^1.10.2"
tree-sitter-python = ">=0.21.0,<0.24.0"
tree-sitter-java = ">=0.21.0,<0.22.0"
tree-sitter-c = ">=0.21.0,<0.22.0"
tree-sitter-cpp = ">=0.21.0,<0.22.0"

# Metric learning for triplet loss
pytorch-metric-learning = "^2.4.0"

# CatBoost for Tier 1 classifier (legacy)
catboost = "^1.2.0"

# Async task handling (optional, for high-throughput deployments)
celery = { extras = ["redis"], version = "^5.4.0", optional = true }
redis = "^5.0.0"

# HuggingFace datasets for training
datasets = "^2.20.0"
huggingface-hub = "^0.25.0"

# Data processing
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"

# Visualization & metrics
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
async = ["celery", "redis"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "catboost.*",
    "bitsandbytes.*",
    "pytorch_metric_learning.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=cipas_ai --cov-report=term-missing"
